add swagger docs for promo services methods
